[gd_scene load_steps=3 format=3 uid="uid://mode_selection"]

[ext_resource type="Script" path="res://scripts/mode_selection.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(1, 0.42, 0.42, 1)
corner_radius_left = 25
corner_radius_top = 25
corner_radius_right = 25
corner_radius_bottom = 25

[node name="ModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 60.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 36
text = "Spielmodus"
horizontal_alignment = 1

[node name="ModeButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="EndlessButton" type="Button" parent="VBoxContainer/ModeButtons"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "ENDLOS"

[node name="StoryButton" type="Button" parent="VBoxContainer/ModeButtons"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "STORY"

[node name="SlotTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Spielstand wählen"
horizontal_alignment = 1

[node name="SlotsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HighscoresButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 22
text = "HIGHSCORES"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Zurück"
